# Progetto_CP

./: Info_Base  README.md  Sees  p21fun.c
CODICE/: Eugenio.c  main.cpp
ProgettoCalcolo/: Block_Sum.c  CMakeLists.txt  main.c  matrix.txt  p21fun.c  p21fun.h  utils.c  utils.h
